# fitness-generator

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
backend/: app.py  config.py  fitness_generator.py  saved_workouts.pckl  workout_config.py
backend/templates/: main.html
frontend/templates/: main.html
test/: test_fitness_generator.py
