[tool.poetry]
name = "fitness-generator"
version = "0.1.0"
description = ""
authors = ["Paul Touma <paultouma.touma@gmail.com>"]
readme = "README.md"
packages = [{include = "fitness_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
jinja2 = "^3.1.2"
debugpy = "^1.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
